fix: icon alignment

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -269,3 +269,7 @@ text-rendering: optimizeLegibility;
 .about a{
   margin-top: 35px;
 }
+
+.signature i{
+  vertical-align: middle;
+}
